Soft body behavior is incorrect when CTRL + F12 animation is rendered. #71961

Closed
opened 2019-11-27 04:30:27 +01:00 by Katsuya Tomono · 8 comments

Operating system: Windows10 64Bit
Graphics card: Nvidia GTX1080

Broken: 2.81 2.82 ALL

The animation in 3D view is correct,
I cannot get the same image as the view that performs CTRL + F12 rendering.

If you execute CTRL + F12 rendering after displaying the intermediate frame in the 3D view timeline, the image will be even more strange.

The correct image was obtained with only one rendering of F12.

I confirmed that the correct image can be obtained when loop rendering is set in python and the index of point_chach is set.

Attach the file used for verification.softbody_chk.blend

Operating system: Windows10 64Bit Graphics card: Nvidia GTX1080 Broken: 2.81 2.82 ALL The animation in 3D view is correct, I cannot get the same image as the view that performs CTRL + F12 rendering. If you execute CTRL + F12 rendering after displaying the intermediate frame in the 3D view timeline, the image will be even more strange. The correct image was obtained with only one rendering of F12. I confirmed that the correct image can be obtained when loop rendering is set in python and the index of point_chach is set. Attach the file used for verification.[softbody_chk.blend](https://archive.blender.org/developer/F8171056/softbody_chk.blend)
Author

Added subscriber: @misty

Added subscriber: @misty
Author

Since it was a Japanese file, I will attach an English version just in case.
softbody_chk2.blend

Since it was a Japanese file, I will attach an English version just in case. [softbody_chk2.blend](https://archive.blender.org/developer/F8171486/softbody_chk2.blend)

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can confirm. The bouncy ball should go between the red lines, and then through the red circle. It does so in a viewport render, but not in a render render.

#71961-bad-result.mp4 #71961-bad-result.mp4

I can confirm. The bouncy ball should go between the red lines, and then through the red circle. It does so in a viewport render, but not in a render render. [#71961-bad-result.mp4](https://archive.blender.org/developer/F8193746/T71961-bad-result.mp4) [#71961-bad-result.mp4](https://archive.blender.org/developer/F8193750/T71961-bad-result.mp4)
Sybren A. Stüvel self-assigned this 2019-12-06 18:02:52 +01:00

I can also reproduce the issue in just the viewport. Go to frame 101, press Space to play, press Esc to stop playback around frame 120. This goes back to frame 101, where the curve has an offset from the bone it's attached to. I gave the curve some thickness to make it more visible:

image.png

I can also reproduce the issue in just the viewport. Go to frame 101, press Space to play, press Esc to stop playback around frame 120. This goes back to frame 101, where the curve has an offset from the bone it's attached to. I gave the curve some thickness to make it more visible: ![image.png](https://archive.blender.org/developer/F8193863/image.png)
Sybren A. Stüvel removed their assignment 2019-12-10 13:00:53 +01:00

I'm reassigning this to the Nodes & Physics project, as it's related to the Soft Body simulation. When I turn that off, things work properly.

Here is the blend file I used to debug things & create the above videos & screenshot: #71961-softbody_chk3.blend

I'm reassigning this to the Nodes & Physics project, as it's related to the Soft Body simulation. When I turn that off, things work properly. Here is the blend file I used to debug things & create the above videos & screenshot: [#71961-softbody_chk3.blend](https://archive.blender.org/developer/F8205115/T71961-softbody_chk3.blend)

This issue was referenced by fe5933a972

This issue was referenced by fe5933a972e15656bdfa1af9eaa0cf64619c9425

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastian Parborg self-assigned this 2020-03-12 15:28:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71961
No description provided.