Fix T71961: Soft body behavior is incorrect when CTRL + F12 animation is rendered.

The softbody modifier was missing the transform depsgraph relation and
thus the object matrix would not get updated during animation render.